Se modifica el artefacto para permiso de S3

--- a/dotnet-desktop.yml
+++ b/dotnet-desktop.yml
@@ -47,6 +47,9 @@ jobs:
     artifacts:
       file:
         - '**/*'
+      base-directory: base_dir
+      name: build-artifact-name
+      discard-paths: no
 
     # Decode the base 64 encoded pfx and save the Signing_Certificate
     #- name: Decode the pfx
