--- a/dotnet-desktop.yml
+++ b/dotnet-desktop.yml
@@ -48,7 +48,7 @@ jobs:
       file:
         - '**/*'
       base-directory: base_dir
-      name: builds/$CODEBUILD_BUILD_NUMBER/my-artifacts
+      name: build-artifact-name
       discard-paths: no
 
     # Decode the base 64 encoded pfx and save the Signing_Certificate
