--- a/dotnet-desktop.yml
+++ b/dotnet-desktop.yml
@@ -3,11 +3,11 @@ phases:
   pre_build:
     commands:
       - echo Restore started on `date`
-      - dotnet restore WebApplicationSample/WebApplicationSample.csproj
+      - dotnet restore
   build:
     commands:
       - echo Build started on `date`
-      - dotnet publish -c release -o ./build_output WebApplicationSample/WebApplicationSample.csproj
+      - dotnet publish -c release -o
 artifacts:
   files:
     - ./**/*
