--- a/dotnet-desktop.yml
+++ b/dotnet-desktop.yml
@@ -7,7 +7,7 @@ phases:
   build:
     commands:
       - echo Build started on `date`
-      - dotnet publish -c release -o
+      - dotnet build -c release
 artifacts:
   files:
     - ./**/*
