Modificación build.yml

--- a/dotnet-desktop.yml
+++ b/dotnet-desktop.yml
@@ -1,15 +1,16 @@
 version: 0.2
+
+env:
+  variables:
+    PROJECT: RegistroNotas
+    dotnet-version: 7.2.x
 phases:
-  pre_build:
-    commands:
-      - echo Restore started on `date`
-      - dotnet restore
   build:
     commands:
       - echo Build started on `date`
       - dotnet build -c Release
-      - dotnet test -c Release --logger trx --results-directory ./testresults
+      - dotnet test -c Release --logger trx --results-directory ./testresultse
 artifacts:
-  file:
+  files:
     - '**/*'
-  base-directory: './build_output'
+  base-directory: 'C:\codebuild\artifacts\_PublishedWebsites\${env:PROJECT}_Package\Archive\'
