--- a/buildspec.yml
+++ b/buildspec.yml
@@ -3,10 +3,12 @@ phases:
   pre_build:
     commands:
       - echo Restore started on `date`
+      - dotnet restore RegistroNotas/RegistroNotas.csproj
   build:
     commands:
       - echo Build started on `date`
+      - dotnet publish -c release -o ./build_output RegistroNotas/RegistroNotas.csproj
 artifacts:
-  file:
-    - '**/*'
+  files:
+    - ./**/*
   base-directory: './build_output'
