--- a/buildspec.yml
+++ b/buildspec.yml
@@ -6,7 +6,7 @@ phases:
   build:
     commands:
       - echo Build started on `date`
-      - dotnet publish -c release -o ./build_output RegistroNotas/RegistroNotas.csproj
+      - dotnet publish -c release
 artifacts:
   files:
     - ./**/*
