--- a/templates/quickstart-dotnetcore-cicd.template.yaml
+++ b/templates/quickstart-dotnetcore-cicd.template.yaml
@@ -37,11 +37,11 @@ Parameters:
   GitHubRepositoryName:
     Type: String
     Description: Name of the GitHub repository that hosts the web application.
-    Default: quickstart-dotnetcore-cicd
+    Default: RegistroNotas
   GitHubBranchName:
     Type: String
     Description: Name of the GitHub branch that the CI/CD pipeline will pull from.
-    Default: 'main'
+    Default: 'master'
   GitHubOwner:
     Type: String
     Description: User name for accessing the GitHub repository.
@@ -52,11 +52,11 @@ Parameters:
   SolutionStack:
     Type: String
     Description: Platform version to use for the .NET Core Elastic Beanstalk environment. Enter the latest version. To find the latest version, go to https://docs.aws.amazon.com/elasticbeanstalk/latest/platforms/platforms-supported.html#platforms-supported.dotnetlinux.
-    Default: '64bit Amazon Linux 2 v2.1.5 running .NET Core' 
+    Default: '64bit Amazon Linux 2 v2.5.1 running .NET Core' 
   CodeBuildImage:
     Type: String
     Description: Docker image version to use for CodeBuild. Enter the latest version. To find the latest version, go to https://docs.aws.amazon.com/codebuild/latest/userguide/build-env-ref-available.html.
-    Default: 'aws/codebuild/amazonlinux2-x86_64-standard:3.0'
+    Default: 'aws/codebuild/amazonlinux2-x86_64-standard:4.0'
 Resources:
   CodeBuildProject:
     Type: AWS::CodeBuild::Project
