--- a/buildspec.yml
+++ b/buildspec.yml
@@ -46,3 +46,7 @@ jobs:
       run: msbuild $env:Solution_Name /t:Restore /p:Configuration=$env:Configuration
       env:
         Configuration: ${{ matrix.configuration }}
+        
+artifacts:
+  files:
+    - .\**\*
