--- a/buildspec.yml
+++ b/buildspec.yml
@@ -3,13 +3,13 @@ version: 0.2
 phases:
   install:
     runtime-versions:
-      dotnet: 7.0
+      dotnet: 6.0
       #dotnet: latest - Latest resolve to 3.1, check this issue https://github.com/aws/aws-codebuild-docker-images/issues/414
    
   pre_build:
     commands:
       - echo Restore started on `date`
-      - dotnet restore test-api/test-api.csproj
+      - dotnet restore RegistroNotas/RegistroNotas.csproj
       
   build:
     commands:
