--- a/buildspec.yml
+++ b/buildspec.yml
@@ -9,20 +9,20 @@ phases:
   pre_build:
     commands:
       - echo Restore started on `date`
-      - dotnet restore RegistroNotas/RegistroNotas.csproj
+      - dotnet restore ./RegistroNotas/RegistroNotas.csproj
       
   build:
     commands:
       - echo Build started on `date`
-      - dotnet build RegistroNotas/RegistroNotas.csproj
+      - dotnet build ./RegistroNotas/RegistroNotas.csproj
       - echo Test started on `date`
-      - dotnet test UnitestProyecto/UnitestProyecto.csproj
+      - dotnet test ./UnitestProyecto/UnitestProyecto.csproj
       
   post_build:
     commands:
       - echo Publish started on `date`
       # https://docs.aws.amazon.com/elasticbeanstalk/latest/dg/dotnet-linux-platform-bundle-app.html
-      - dotnet publish -c Release -r linux-x64 -o ./ RegistroNotas/RegistroNotas.csproj
+      - dotnet publish -c Release -r linux-x64 -o ./RegistroNotas/RegistroNotas.csproj
       
 artifacts:
   files:
