--- a/buildspec.yml
+++ b/buildspec.yml
@@ -10,7 +10,7 @@ phases:
   pre_build:
     commands:
       - echo Restore started on `date`
-      - dotnet restore RegistroNotas\RegistroNotas.csproj
+      - dotnet restore RegistroNotas/RegistroNotas.csproj
       
   build:
     commands:
@@ -21,10 +21,10 @@ phases:
     commands:
       - echo Publish started on `date`
       # https://docs.aws.amazon.com/elasticbeanstalk/latest/dg/dotnet-linux-platform-bundle-app.html
-      - dotnet publish -c Release -r linux-x64 --self-contained false RegistroNotas\RegistroNotas.csproj
+      - dotnet publish -c Release -r linux-x64 --self-contained false RegistroNotas/RegistroNotas.csproj
       
 artifacts:
   files:
     - '**/*'
-  base-directory: ./bin/Release/netcoreapp3.1/linux-x64/publish/
+  base-directory: ./bin/Release/net7.0/linux-x64/publish/
   discard-paths: no
