--- a/buildspec.yml
+++ b/buildspec.yml
@@ -15,7 +15,7 @@ phases:
   build:
     commands:
       - echo Build started on `date`
-      - dotnet build RegistroNotas\RegistroNotas.csproj
+      - dotnet build RegistroNotas/RegistroNotas.csproj
       
   post_build:
     commands:
