--- a/buildspec.yml
+++ b/buildspec.yml
@@ -1,7 +1,12 @@
 # Based on https://github.com/PrakashTrove/AWS-CodeBuild-NetCore/blob/master/buildspec.yml
 # AWS CodeBuild spec to build an Elastic Beanstalk artifact for AWS CodePipeline to deploy
 version: 0.2
-    
+
+env:
+    variables:
+      PROJECT: dotnetcore-cicd-ElasticBeanstalkApplication-RMYGTJUIEBL4
+      DOTNET_CORE_RUNTIME: 7.0
+      
 phases:   
   install:
     runtime-versions:
