--- a/buildspec.yml
+++ b/buildspec.yml
@@ -15,7 +15,7 @@ phases:
   pre_build:
     commands:
       - echo Restore started on `date`
-      - dotnet restore RegistroNotas/RegistroNotas.csproj
+      - dotnet restore
       
   build:
     commands:
