--- a/buildspec.yml
+++ b/buildspec.yml
@@ -1,38 +1,6 @@
 version: 0.2
-
+phases:
   build:
-
-    strategy:
-      matrix:
-        configuration: [Debug,Release]
-        
-    env:
-      Solution_Name: RegistroNotas.sln
-      Test_Project_Path: UnitestProyecto/UnitestProyecto.csproj
-      Wap_Project_Directory: RegistroNotas
-      Wap_Project_Path: RegistroNotas/RegistroNotas.csproj
-
-    steps:
-    # Install the .NET Core workload
-    - name: Install .NET Core
-      uses: actions/setup-dotnet@v3
-      with:
-        dotnet-version: 7.0.x
-
-    # Add  MSBuild to the PATH: https://github.com/microsoft/setup-msbuild
-    - name: Setup MSBuild.exe
-      uses: microsoft/setup-msbuild@v1.0.2
-
-    # Execute all unit tests in the solution
-    - name: Execute unit tests
-      run: dotnet test
-
-    # Restore the application to populate the obj folder with RuntimeIdentifiers
-    - name: Restore the application
-      run: msbuild $env:Solution_Name /t:Restore /p:Configuration=$env:Configuration
-      env:
-        Configuration: ${{ matrix.configuration }}
-        
-artifacts:
-  files:
-    - ./**/*/
+    commands:
+      - dotnet restore RegistroNotas.sln
+      - dotnet build RegistroNotas.sln
