--- a/buildspec.yml
+++ b/buildspec.yml
@@ -1,7 +1,31 @@
+# Based on https://github.com/PrakashTrove/AWS-CodeBuild-NetCore/blob/master/buildspec.yml
+# AWS CodeBuild spec to build an Elastic Beanstalk artifact for AWS CodePipeline to deploy
 version: 0.2
+    
 phases:
+  install:
+    runtime-versions:
+      dotnet: 5.0
+      #dotnet: latest - Latest resolve to 3.1, check this issue https://github.com/aws/aws-codebuild-docker-images/issues/414
+   
+  pre_build:
+    commands:
+      - echo Restore started on `date`
+      - dotnet restore RegistroNotas/RegistroNotas.csproj
+      
   build:
     commands:
-      - dotnet new webapp -f net6.0
-      - dotnet restore RegistroNotas.sln
-      - dotnet build RegistroNotas.sln
+      - echo Build started on `date`
+      - dotnet build RegistroNotas/RegistroNotas.csproj
+      - echo Test started on `date`
+      - dotnet test RegistroNotas/RegistroNotas.csproj
+      
+  post_build:
+    commands:
+      - echo Publish started on `date`
+      # https://docs.aws.amazon.com/elasticbeanstalk/latest/dg/dotnet-linux-platform-bundle-app.html
+      - dotnet publish -c Release -r linux-x64 -o ./ RegistroNotas/RegistroNotas.csproj
+      
+artifacts:
+  files:
+    - ./**/*
