--- a/buildspec.yml
+++ b/buildspec.yml
@@ -1,7 +1,7 @@
 # Based on https://github.com/PrakashTrove/AWS-CodeBuild-NetCore/blob/master/buildspec.yml
 # AWS CodeBuild spec to build an Elastic Beanstalk artifact for AWS CodePipeline to deploy
 version: 0.2
-    
+
 phases:
   install:
     runtime-versions:
@@ -11,6 +11,7 @@ phases:
   pre_build:
     commands:
       - echo Restore started on `date`
+      - dotnet nuget locals all --clear
       - dotnet restore
       
   build:
