--- a/buildspec.yml
+++ b/buildspec.yml
@@ -2,6 +2,10 @@
 # AWS CodeBuild spec to build an Elastic Beanstalk artifact for AWS CodePipeline to deploy
 version: 0.2
 
+steps:
+- checkout: self
+  lfs: true
+
 phases:
   install:
     runtime-versions:
