--- a/buildspec.yml
+++ b/buildspec.yml
@@ -9,7 +9,7 @@ phases:
       #dotnet: latest - Latest resolve to 3.1, check this issue https://github.com/aws/aws-codebuild-docker-images/issues/414
     commands:
       - echo Installing Entity Framework Core tools reference - .NET CLI
-      - dotnet tool install --global dotnet-ef
+      - dotnet add package MySql.EntityFrameworkCore
    
   pre_build:
     commands:
