--- a/buildspec.yml
+++ b/buildspec.yml
@@ -9,8 +9,8 @@ phases:
       #dotnet: latest - Latest resolve to 3.1, check this issue https://github.com/aws/aws-codebuild-docker-images/issues/414
     commands:
       - echo Installing Entity Framework Core tools reference - .NET CLI
-      - echo Installing MySql.EntityFrameworkCore - .NET CLI
-      - echo Installing MySql.Data.EntityFrameworkCore - .NET CLI
+      - echo Installing MySql.EntityFrameworkCore reference  - .NET CLI
+      - echo Installing MySql.Data.EntityFrameworkCore reference  - .NET CLI
    
   pre_build:
     commands:
